# browsertrix-old

./: .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  NOTICE  README.md  cli-requirements.txt  dev-requirements.txt  docker-compose.yml  install-browsers.sh  mypy.ini  pool_config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-docker-requirements.txt  test-local-requirements.txt  test-requirements.txt
browsertrix/: __init__.py  api.py  crawl.py  schema.py  types_.py  utils.py
browsertrix_cli/: __init__.py  basecli.py  crawl.py  crawls.py  main.py  profile.py
crawlmanager/: __init__.py  _redis.py  api.py  crawl.py  schema.py  utils.py
crawlmanager_cli/: main.py
flocks/: browsers-headless.yaml  browsers.yaml
frontend/: .babelrc.js  .eslintrc.js  gatsby-browser.js  gatsby-config.js  package.json
frontend/public/: index.html
frontend/src/: root.js  utils.js  wrap-with-provider.js
frontend/src/actions/: crawls.js  httpRequests.js  index.js
frontend/src/components/: Alert.js  BootStrapper.js  Layout.js  Test.js
frontend/src/components/Crawl/: Control.js  Info.js  index.js
frontend/src/components/CrawlCreator/: CreationForm.js  fields.js  index.js  validate.js
frontend/src/components/Crawls/: Crawl.js  CrawlLi.js  LoadingCrawls.js  SelectCrawl.js  ViewAllCrawls.js  index.js
frontend/src/components/CreateOrFetchAllCrawls/: CrawlCreator.js  index.js
frontend/src/components/Header/: HeaderLink.js  index.js
frontend/src/containers/: App.js  Crawls.js  Layout.js
frontend/src/pages/: crawlInfo.js  index.js
frontend/src/reducers/: crawls.js  index.js
frontend/src/store/: dev.js  index.js  middleware.js  prod.js
frontend/src/styles/: global.scss
frontend/src/utils/: bootstrap.js  endpoints.js  index.js  keys.js  makeHTTPRequest.js  rhlConfig.js
frontend/webpack/: development-server.js  webpack.config.dev.js  webpack.config.js
pywb/: Dockerfile  config.yaml  crawlapp.py  run.sh  uwsgi.ini
pywb-instance/: Dockerfile  build.sh  config.yaml  crawlapp.py
pywb-instance/proxy-certs/: pywb-ca.pem
pywb/templates/: fullsearch.html
reqs/: dev-requirements.txt  requirements.txt
sample-crawls/: custom-scopes.yaml  emulate-mobile-browser.yaml  example.yaml  override-browser-http-cookies-language.yaml  social-media-replay.yaml  social-media.yaml
sample_crawl_specs/: custom-scopes.yaml  example.yaml  social-media-replay.yaml  social-media.yaml
scripts/: format.sh  lint.sh
simple-driver/: build.sh  index.js  media.js
src/frontend/: package.json
static/: app.js  index.html
templates/: ui.html
tests/: bootstrap-compose.sh  conftest.py  crawl_tests.yaml  start-test-compose.sh  stop-test-compose.sh  test-docker-compose.yml  test_api.py  test_live_crawl.py  test_pool_config.yaml  utils.py
