[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.poetry]
name = "crawlmanager"
version = "0.0.1"
description = ""
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/webrecorder/crawlmanager"
authors = ["John Berlin <john.berlin@rhizome.org>", "Ilya Kreymer <ikreymer@gmail.com"]

[tool.poetry.dependencies]
python = ">= 3.7"
aiodns = ">= 2.0"
aiohttp = ">= 3.5.4"
aioredis = ">= 1.2.0"
async-timeout = ">= 3.0"
cchardet = ">= 2.1"
fastapi = ">= 0.9.1"
jinja2 = ">= 2.10"
pydantic = ">= 0.21"
python-multipart = ">= 0.0.5"
starlette = ">= 0.11.1"
ujson = ">= 1.35"
uvicorn = ">= 0.6.1"
uvloop = ">= 0.12.2"
better_exceptions = ">= 0.2.2"
pyyaml = "^5.1"


[tool.poetry.dev-dependencies]
flake8 = ">= 3.7.7"
flake8-bugbear = ">= 18.8.0"
flake8-mypy = ">= 17.8.0"
mypy = ">= 0.670"
pytest = ">= 4.3.1"
pytest-asyncio = ">= 0.10.0"
black = ">= 19.3b0"
mock = "^2.0"
requests = "^2.21"
fakeredis = "^1.0"

